Just install drush.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,10 +11,21 @@ jobs:
     name: A job to say hello
     steps:
     - uses: actions/checkout@v2
+    # Setup PHP according to the version passed in.
+    - name: Setup PHP
+      uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ inputs.php-version }}
+          # Install extensions for PHP-PostgreSQL
+          extensions: mbstring, intl, php-pgsql, php-gd, php-xml
+          # Increase memory limit to 2G
+          ini-values: memory_limit=2G
+          # Enable xdebug for coverage reporting
+          coverage: xdebug
+          # Install composer and phpunit globally.
+          tools: composer, phpunit
     - id: foo
       uses: tripal/setup-tripal-action@7.x-3.x-0.1
-      with:
-        php-version: 7.2
     - name: test_drush
       env:
         DRUSH: ${{ steps.foo.outputs.drush_path }}
