--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Setup PHP
       uses: shivammathur/setup-php@v2
         with:
-          php-version: ${{ inputs.php-version }}
+          php-version: 7.2
           # Install extensions for PHP-PostgreSQL
           extensions: mbstring, intl, php-pgsql, php-gd, php-xml
           # Increase memory limit to 2G
