--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,10 +7,39 @@ on: [push, pull_request]
 
 jobs:
   run-tests:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    name: A job to say hello
+    # Matrix Build for this job.
+    strategy:
+      matrix:
+        php-versions: ['7.1', '7.2']
+    # Name the matrix build so we can tell them apart.
+    name: PHPUnit Testing of Tripal Core (PHP ${{ matrix.php-versions }})
+
+    # Service containers to run with `run-tests`
+    services:
+      # Label used to access the service container
+      postgres:
+        # Docker Hub image
+        image: postgres
+        env:
+          POSTGRES_USER: tripaladmin
+          POSTGRES_PASSWORD: somesupersecurepassword
+          POSTGRES_DB: testdb
+        # Set health checks to wait until postgres has started
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          # Maps tcp port 5432 on service container to the host
+          - 5432:5432
+
     steps:
+    # Checkout the repository and setup workspace.
     - uses: actions/checkout@v2
+
     # Setup PHP according to the version passed in.
     - name: Setup PHP
       uses: shivammathur/setup-php@v2
@@ -24,12 +53,22 @@ jobs:
         coverage: xdebug
         # Install composer and phpunit globally.
         tools: composer, phpunit
-    - id: foo
+    # Check Drush
+    - id: tripalsetup
       uses: tripal/setup-tripal-action@7.x-3.x-0.1
-    - name: test_drush
+      with:
+        postgres_user: tripaladmin
+        postgres_pass: somesupersecurepassword
+        postgres_db: testdb
+    - name: test_install
       env:
-        DRUSH: ${{ steps.foo.outputs.drush_path }}
+        DRUSH: ${{ steps.tripalsetup.outputs.drush_path }}
+        DRUPAL_ROOT: ${{ steps.tripalsetup.outputs.drupal_root }}
       run: |
-        echo "Output Drush Version: ${{ steps.foo.outputs.drush_version }}"
-        $DRUSH --help
-      shell: bash
+        $DRUSH --version
+        cd $DRUPAL_ROOT
+        $DRUSH status
+        echo "==> File contents of Drupal Root"
+        ls
+        echo "==> File content of Modules Directory"
+        ls $DRUPAL_ROOT/sites/all/modules
