--- a/action.yml
+++ b/action.yml
@@ -18,6 +18,10 @@ inputs:
     description: The password for your Drupal/Tripal administrative user.
     required: true
     default: somereallysecurepassword
+  tripal_verion:
+    description: The version of Tripal to download.
+    required: true
+    default: 3.4
 outputs:
   drush_path:
     description: "The Path to the Drush Executable."
@@ -82,9 +86,9 @@ runs:
         ACCOUNT_NAME: ${{ inputs.account_name }}
         ACCOUNT_PASS: ${{ inputs.account_pass }}
       run: |
-        echo "==> Move Tripal into the Drupal modules directory"
-        ls /home/runner/work/tripal/tripal
-        cp -R /home/runner/work/tripal/tripal $DRUPAL_ROOT/sites/all/modules
+        echo "==> Download Tripal"
+        cd $DRUPAL_ROOT/sites/all/modules
+        git clone https://github.com/tripal/tripal.git --depth 1 --branch ${{ inputs.tripal_version }}
         echo "==> Apply Views Patch"
         cd $DRUPAL_ROOT/sites/all/modules/views
         patch -p1 < ../tripal/tripal_chado_views/views-sql-compliant-three-tier-naming-1971160-30.patch
