--- a/action.yml
+++ b/action.yml
@@ -68,13 +68,13 @@ runs:
               --site-mail=admin@example.com \
               --site-name=Tripal3
         echo "==> Downloading dependencies"
-        $DRUSH dl -y views ctools entity redirect date ds field_group field_group_table
+        $DRUSH dl -y --quiet  views ctools entity redirect date ds field_group field_group_table
         echo "==> Enabling Dependencies"
-        $DRUSH en -y views ctools entity redirect date ds field_group field_group_table
+        $DRUSH en -y --quiet views ctools entity redirect date ds field_group field_group_table
         echo "==> Apply Drupal Patch"
         cd $DRUPAL_ROOT
-        wget --no-check-certificate https://drupal.org/files/drupal.pgsql-bytea.27.patch
-        patch -p1 < drupal.pgsql-bytea.27.patch
+        wget --quiet --no-check-certificate https://www.drupal.org/files/drupal.pgsql-bytea.27.patch
+        patch --quiet -p1 < drupal.pgsql-bytea.27.patch
     # Install Tripal, Chado and prepares the Drupal/Chado databases
     # Also patches views.
     - name: Install Tripal
@@ -88,16 +88,16 @@ runs:
       run: |
         echo "==> Download Tripal"
         cd $DRUPAL_ROOT/sites/all/modules
-        git clone https://github.com/tripal/tripal.git --depth 1 --branch ${{ inputs.tripal_version }}
+        git clone https://github.com/tripal/tripal.git --quiet --depth 1 --branch ${{ inputs.tripal_version }}
         echo "==> Apply Views Patch"
         cd $DRUPAL_ROOT/sites/all/modules/views
-        patch -p1 < ../tripal/tripal_chado_views/views-sql-compliant-three-tier-naming-1971160-30.patch
+        patch  --quiet -p1 < ../tripal/tripal_chado_views/views-sql-compliant-three-tier-naming-1971160-30.patch
         echo "==> Install Tripal"
         cd $DRUPAL_ROOT
-        $DRUSH en -y tripal tripal_chado tripal_chado_views tripal_ws tripal_ds
+        $DRUSH en -y  --quiet tripal tripal_chado tripal_chado_views tripal_ws tripal_ds
         echo "==> Install Chado"
-        $DRUSH eval "module_load_include('inc', 'tripal_chado', 'includes/tripal_chado.install'); tripal_chado_load_drush_submit('Install Chado v1.3');"
-        $DRUSH trp-run-jobs --username=$ACCOUNT_NAME
+        $DRUSH eval "module_load_include('inc', 'tripal_chado', 'includes/tripal_chado.install'); tripal_chado_load_drush_submit('Install Chado v1.3');"  --quiet
+        $DRUSH trp-run-jobs --quiet --username=$ACCOUNT_NAME
         echo "==> Prepare Chado"
-        $DRUSH eval "module_load_include('inc', 'tripal_chado', 'includes/setup/tripal_chado.setup'); tripal_chado_prepare_drush_submit();"
-        $DRUSH trp-run-jobs --username=$ACCOUNT_NAME
+        $DRUSH eval "module_load_include('inc', 'tripal_chado', 'includes/setup/tripal_chado.setup'); tripal_chado_prepare_drush_submit();"  --quiet
+        $DRUSH trp-run-jobs --quiet --username=$ACCOUNT_NAME
