--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,11 +40,6 @@ jobs:
     # Checkout the repository and setup workspace.
     - uses: actions/checkout@v2
 
-    - name: Inject slug/short variables
-      uses: rlespinasse/github-slug-action@v4
-      with:
-        prefix: SLUG_
-
     # Setup PHP according to the version passed in.
     - name: Setup PHP
       uses: shivammathur/setup-php@v2
@@ -58,28 +53,24 @@ jobs:
         coverage: xdebug
         # Install composer and phpunit globally.
         tools: composer, phpunit
-    - name: Show GitHub context
-      env:
-        GITHUB_CONTEXT: ${{ toJson(github) }}
-      run: echo "$GITHUB_CONTEXT"
 
     # Check Drush
-    #- id: tripalsetup
-    #  uses: tripal/setup-tripal-action
-    #  with:
-    #    postgres_user: tripaladmin
-    #    postgres_pass: somesupersecurepassword
-    #    postgres_db: testdb
-    #    tripal_version: 7.x-3.x
-    #- name: test_install
-    #  env:
-    #    DRUSH: ${{ steps.tripalsetup.outputs.drush_path }}
-    #    DRUPAL_ROOT: ${{ steps.tripalsetup.outputs.drupal_root }}
-    #  run: |
-    #    $DRUSH --version
-    #    cd $DRUPAL_ROOT
-    #    $DRUSH status
-    #    echo "==> File contents of Drupal Root"
-    #    ls
-    #    echo "==> File content of Modules Directory"
-    #    ls $DRUPAL_ROOT/sites/all/modules
+    - id: tripalsetup
+      uses: tripal/setup-tripal-action@${{ github.sha }}
+      with:
+        postgres_user: tripaladmin
+        postgres_pass: somesupersecurepassword
+        postgres_db: testdb
+        tripal_version: 7.x-3.x
+    - name: test_install
+      env:
+        DRUSH: ${{ steps.tripalsetup.outputs.drush_path }}
+        DRUPAL_ROOT: ${{ steps.tripalsetup.outputs.drupal_root }}
+      run: |
+        $DRUSH --version
+        cd $DRUPAL_ROOT
+        $DRUSH status
+        echo "==> File contents of Drupal Root"
+        ls
+        echo "==> File content of Modules Directory"
+        ls $DRUPAL_ROOT/sites/all/modules
