--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,6 +57,7 @@ jobs:
     - name: Testing
       run: |
         ls
+        pwd
     # Check Drush
     - id: tripalsetup
       uses: ./action.yml
