--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
     # Matrix Build for this job.
     strategy:
       matrix:
-        php-versions: ['7.1', '7.2']
+        php-versions: ['7.4', '8.0', '8.1']
     # Name the matrix build so we can tell them apart.
     name: PHPUnit Testing of Tripal Core (PHP ${{ matrix.php-versions }})
 
@@ -54,10 +54,6 @@ jobs:
         # Install composer and phpunit globally.
         tools: composer, phpunit
 
-    - name: Testing
-      run: |
-        ls
-        pwd
     # Check Drush
     - id: tripalsetup
       uses: ./
