Add patch as was done in Tripal#1290 (#2)
* Add patch as was done in Tripal#1290
* Ensure testing uses the current action and Tripal dev version

--- a/action.yml
+++ b/action.yml
@@ -74,8 +74,10 @@ runs:
         $DRUSH en -y --quiet views ctools entity redirect date ds field_group field_group_table
         echo "==> Apply Drupal Patch"
         cd $DRUPAL_ROOT
-        wget --quiet --no-check-certificate https://www.drupal.org/files/drupal.pgsql-bytea.27.patch
-        patch --quiet -p1 < drupal.pgsql-bytea.27.patch
+        wget --no-check-certificate https://www.drupal.org/files/drupal.pgsql-bytea.27.patch
+        patch -p1 < drupal.pgsql-bytea.27.patch
+        wget --no-check-certificate https://www.drupal.org/files/issues/2022-06-20/3284424-7.patch
+        patch -p1 < 3284424-7.patch
     # Install Tripal, Chado and prepares the Drupal/Chado databases
     # Also patches views.
     - name: Install Tripal
