--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
     # Matrix Build for this job.
     strategy:
       matrix:
-        php-versions: ['7.1', '7.2']
+        php-versions: ['7.4', '8.0', '8.1']
     # Name the matrix build so we can tell them apart.
     name: PHPUnit Testing of Tripal Core (PHP ${{ matrix.php-versions }})
 
@@ -53,13 +53,15 @@ jobs:
         coverage: xdebug
         # Install composer and phpunit globally.
         tools: composer, phpunit
+
     # Check Drush
     - id: tripalsetup
-      uses: tripal/setup-tripal-action@7.x-3.x-1.0
+      uses: ./
       with:
         postgres_user: tripaladmin
         postgres_pass: somesupersecurepassword
         postgres_db: testdb
+        tripal_version: 7.x-3.x
     - name: test_install
       env:
         DRUSH: ${{ steps.tripalsetup.outputs.drush_path }}
